events & clubs search modals structure in place

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_self
  */
 
-.jumbotron {
+.jumbotronspecial {
     margin-bottom: 0px;
     background-image: url(http://farm4.staticflickr.com/3762/11760609733_c2893b925e_b.jpg);
     background-position: 0% 25%;
