--- a/app/views/club_templates/club_profile_edit.html.erb
+++ b/app/views/club_templates/club_profile_edit.html.erb
@@ -15,9 +15,6 @@
 </div>
 
 <form action="/update_club/<%= @club.id %>" method="post" >
-  <button type="submit" class="btn btn-warning btn-block">
-  Save Changes
-  </button>
   <div class="row p-4">
     <div class="col-md-12">
       <!-- Label and input for title -->
@@ -65,6 +62,17 @@
           <input type="text" id="image_url" name="image_url" class="form-control" value="<%= @club.source %>">
         </div>
       </div>
+      <div class="card mb-4 pl-4">
+        <div class="card-body">
+          <h5 class="card-title">Events</h5>
+          <a href="/events/new" class="btn btn-success btn-block">
+            Create New Event
+          </a>
+          <a href="#" class="btn btn-light btn-block">
+            Edit Past Events
+          </a>
+        </div>
+      </div>
   </div>
   <div class="col-md-3 p-3">
     <div class="card mb-4">
@@ -81,6 +89,18 @@
     </div>
   </div>
 </div>
+
+<div class="form-group">
+    <label for="admin_user_id">
+      Club Admin
+    </label>
+
+    <%= select_tag("admin_user_id", options_from_collection_for_select(User.all, :id, :firstname, @club.try(:admin_user_id)), :class => "form-control") %>
+  </div>
+  
+<button type="submit" class="btn btn-warning btn-block">
+  Save Changes
+  </button>
 </form>
 <div class="row p-4">
     <div class="col-md-12">
