--- a/app/views/club_templates/edit_form.html.erb
+++ b/app/views/club_templates/edit_form.html.erb
@@ -81,6 +81,15 @@
     <input type="text" id="image_url" name="image_url" class="form-control" value="<%= @club.source %>">
   </div>
   
+  <div class="form-group">
+    <label for="admin_user_id">
+      Club Admin
+    </label>
+
+    <%= select_tag("admin_user_id", options_from_collection_for_select(User.all, :id, :firstname, @club.try(:user_id)), :class => "form-control") %>
+  or <a href="/users/new">add a new user</a> first
+  </div>
+
 
   <button class="btn btn-block btn-outline-secondary">
     Update club
